Fix CSS on Firefox and way preview is computed

--- a/src/Contextualize/styles.css
+++ b/src/Contextualize/styles.css
@@ -1,6 +1,7 @@
 .Contextualize {
   display: flex;
   flex-direction: column;
+  min-height: 0;
 }
 
 .Contextualize-curve {
